[tool.poetry]
name = "sattracker"
version = "0.1.0"
description = "Show passes for selected satellites in the next 24 hours"
authors = ["Simon Murphy <simon.murphy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
